# microscape

./: .gitignore  404.html  BENCHMARKS.md  README.md  TODO.md  index.html  microscape-s00-countseqs.sh  microscape-s00-demultiplex.sh  microscape-s00-functions.r  microscape-s00-plot-seq-map.R  microscape-s00-remove-primers.sh  microscape-s00-setup.r  microscape-s01-setup-tax-dbs.r  microscape-s10-dada.r  microscape-s20-merge.r  microscape-s25-phylogeny.r  microscape-s30-taxonomy.r  microscape-s40-metadata.r  microscape-s50-renormalize.r  microscape-s60-clusters.r  microscape-s70-network.r  microscape-s99-shiny.r  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: build-container.yml  docs.yml
api/: index.html
conda/: meta.yaml
dada2_gpu/: DESCRIPTION  Makefile  README.md  cleanup  configure
dada2_gpu/dada2gpu/: __init__.py  _cdada.py  dada.py  error.py  io.py
dada2_gpu/src/: Rmain.cpp  cluster.cpp  cuda_compare.cu  cuda_compare.h  dada.h  dada2_capi.cpp  dada2_capi.h  derep.c  pval.cpp
docs/: api.md  index.md  pipeline.md  quickstart.md
microscape/: __init__.py  cli.py  filter.py  metadata.py  network.py  ordination.py  phylogeny.py  prep.py  quality.py  renormalize.py  viz.py
nextflow/: .nextflow.log.1  .nextflow.log.2  .nextflow.log.3  .nextflow.log.4  .nextflow.log.5  .nextflow.log.6  .nextflow.log.7  .nextflow.log.8  .nextflow.log.9  Dockerfile  main.nf  nextflow.config
nextflow/.nextflow/: history
nextflow/envs/: cluster.yml  cutadapt.yml  dada2.yml  demux.yml  network.yml  phylo.yml  python.yml  r.yml  shiny.yml
nextflow/modules/: cluster.nf  dada2.nf  demultiplex.nf  merge.nf  metadata.nf  network.nf  phylogeny.nf  primers.nf  renormalize.nf  shiny.nf  taxonomy.nf
pipeline/: index.html
quickstart/: index.html
r-package/: DESCRIPTION
r-package/man/: microSCAPE-package.Rd
r-package/tests/: testthat.R
r-package/vignettes/: microSCAPE.Rmd
search/: search_index.json
test_results/clustering/: sample_bray_dist.rds  sample_bray_tsne.rds  seq_bray_dist.rds  seq_bray_tsne.rds
test_results/error_models/: 16S-Plate1Pool-Rep1_errF.rds  16S-Plate1Pool-Rep1_errR.rds
(+651 files in other folders)
